# matternet-rs

./: .gitignore  Cargo.toml  README.md
src/: builder.rs  clustering.rs  core.rs  energymaps.rs  taumode.rs
src/tests/: test_clustering.rs  test_load_from_storage.rs
src_legacy/: eigenmaps.rs  lib.rs  main.rs  motives.rs  sampling.rs  sorted_index.rs  sparsification.rs
src_legacy/storage/: test_storage.rs
src_legacy/subgraphs/: mod.rs  sg_from_centroids.rs  sg_from_motives.rs
src_legacy/subgraphs/tests/: mod.rs  test_subg_centroids.rs  test_subg_motives.rs  test_subg_parallel.rs
src_legacy/tests/: test_arrow.rs  test_data.rs  test_dimensional.rs  test_energy_builder.rs  test_energy_search.rs  test_graph_factory.rs  test_helpers.rs  test_laplacian.rs  test_laplacian_unnormalised.rs  test_motives.rs  test_querying_proj.rs  test_sparsification.rs  test_taumode.rs
surfface-core/: Cargo.toml
surfface-core/src/: backend.rs  centroid.rs  clustering.rs  data.rs  distance.rs  laplacian.rs  lib.rs  matrix.rs  mst.rs  smoothing_chain.rs  taumode.rs
surfface-core/src/spectral/: bridge.rs  mod.rs  stage.rs
surfface-core/src/tests/: mod.rs  test_centroid.rs  test_clustering.rs  test_laplacian.rs  test_random.rs  test_reduction.rs  test_smoothing.rs  test_spectral.rs
surfface-pipeline/: Cargo.toml
surfface-pipeline/src/: builder.rs  lib.rs
surfface-pipeline/src/stages/: clustering.rs
surfface-py/: Cargo.toml
surfface-storage/: Cargo.toml
