[package]
name = "surfface"
version = "0.26.0"
edition = "2024"
description = "Graph Wiring for embeddings using physical networks wiring. Provides graph analysis, vector search and a energy-distribution stats."
authors = ["Lorenzo <tunedconsulting@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tuned-org-uk/surfface-rs"
homepage = "https://github.com/tuned-org-uk/surfface-rs"
documentation = "https://docs.rs/surfface-rs"
readme = "README.md"
keywords = ["vector-search", "spectral-analysis", "graph-signal", "similarity-search", "machine-learning"]
categories = ["algorithms", "mathematics", "science"]
exclude = [
    "target/*",
    "Cargo.lock",
    ".git/*",
    ".github/*",
    "*.tmp",
    "*.md",
    "*.bib",
    "*.cff",
    "test_data/*",
    "examples/*"
]

[dependencies]

# storage feature
parquet = { version = "57.3.0", optional = true}
uuid = { version = "1.20.0", features = ["v4", "serde"], optional = true }
arrow = { version = "57.3.0", optional = true }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.149", optional = true }
chrono = { version = "0.4.42", optional = true }
csv = { version = "1.4.0", optional = true }

[dev-dependencies]
criterion = "0.8.1"
rand_pcg = "0.9.0"
tempfile = "3.24.0"
rand_xoshiro = "0.7.0"
serial_test = "3.0"

[features]
default = []
storage = ["dep:parquet", "dep:uuid", "dep:arrow", "dep:serde_json", "dep:chrono", "dep:csv"]

[examples]

# Root Cargo.toml
[workspace]
members = [
    "surfface-core",
    "surfface-pipeline",
    "surfface-storage",
    "surfface-py",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
ordered-float = "5.1.0"
rayon = "1.11.0"
sprs = "0.11.4"
approx = "0.5.1"
log = "0.4.28"
env_logger = "0.11.8"
dashmap = "6.1.0"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"

burn = { version = "0.20.1", default-features = false, features = ["std", "train"] }
ndarray = { version = "0.17.2", default-features = false, features = ["std", "approx", "rayon", "matrixmultiply-threading"] }


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1  # Faster dev builds
