[package]
name = "surfface-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "surfface_core"
crate-type = ["rlib"]

[dependencies]
burn-ndarray = { version = "0.20.1", optional = true }
burn-wgpu = { version = "0.20.1", optional = true }
burn-cuda = { version = "0.20.1", optional = true }
rand_chacha = "0.9.0"
rand = "0.9.2"
rand_distr = "0.5.1"

kalman_clustering = "0.3.0"

burn = { workspace = true }
rayon = { workspace = true }
sprs = { workspace = true }
dashmap = { workspace = true }
approx = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
rand_pcg = "0.9.0"
rand_xoshiro = "0.7.0"

[features]
default = ["cpu"]
cpu = ["burn-ndarray"]
wgpu = ["burn-wgpu"]
cuda = ["burn-cuda"]
